--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-chartjs": "^5.3.2",
     "vue-datepicker-next": "^1.0.3",
     "vue-router": "^4.0.13",
+    "vue3-dropzone": "^2.2.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
