--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-datepicker-next": "^1.0.3",
     "vue-router": "^4.0.13",
     "vue3-dropzone": "^2.2.1",
+    "vuex": "^4.0.2",
     "yup": "^1.7.1"
   },
   "devDependencies": {
